Update productDetail save flow with loc hierarchy